# easy_translate

./: .gitignore  404.html  LICENSE  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml  sitemap.xml
.github/workflows/: code_quality.yaml  docs_deployment.yaml  prerelease.yaml  release.yaml
docs/: index.md
docs/evaluation/: evaluator.md  model.md  overview.md  usage.md
docs/package_docs/: languages_support.md  llm_translation.md  non_llm_translation.md  overview.md
easy_nlp_translate/: config.py
easy_nlp_translate/llm_provider/: __init__.py  gemini.py  ollama.py  openai.py
evaluation/: main.py  mkdocs.yml  result_evaluation.ipynb  translation_evaluation_report.csv  translation_evaluator.py
evaluation/analysis/: utils.py  visualization.py
evaluation/config/: index.html
evaluation/configs/: config.py  language_mappings.yaml
evaluation/docs/: config.md  evaluator.md  index.md  metrics.md  model.md  overview.md
evaluation/evaluator/: index.html
evaluation/metrics/: index.html
evaluation/model/: index.html
evaluation/models/: __init__.py  base_translator.py  llm_model_translator.py  m2m100_model_translator.py  mBART_50_model_translator.py  marianmt_model_translator.py  nllb_model_translator.py  t5_model_translator.py
evaluation/overview/: index.html
evaluation/reports/: gemma_de-en_report.csv  gemma_fi-en_report.csv  gemma_gu-en_report.csv  gemma_lt-en_report.csv  gemma_ru-en_report.csv  gemma_zh-en_report.csv  llama3.1_de-en_report.csv  llama3.1_fi-en_report.csv  llama3.1_gu-en_report.csv  llama3.1_lt-en_report.csv  llama3.1_ru-en_report.csv  llama3.1_zh-en_report.csv  llama3.2_de-en_report.csv  llama3.2_fi-en_report.csv  llama3.2_gu-en_report.csv  llama3.2_lt-en_report.csv  llama3.2_ru-en_report.csv  llama3.2_zh-en_report.csv  m2m100_de-en_report.csv  m2m100_fi-en_report.csv  m2m100_gu-en_report.csv  m2m100_lt-en_report.csv  m2m100_ru-en_report.csv  m2m100_zh-en_report.csv  marian_de-en_report.csv  marian_fi-en_report.csv  marian_ru-en_report.csv  marian_zh-en_report.csv  mbart50_de-en_report.csv  mbart50_fi-en_report.csv  mbart50_gu-en_report.csv  mbart50_lt-en_report.csv  mbart50_ru-en_report.csv  mbart50_zh-en_report.csv  mistral_de-en_report.csv  mistral_fi-en_report.csv  (+22 more)
search/: search_index.json
src/: __init__.py  config.py  hello.py  huggingface_translator_base.py  initialize.py  llm_translator_base.py  prompt_config.py  translator_base.py
tests/: test_main.py
(+24 files in other folders)
