[project]
name = "easy-nlp-translate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface>=0.0.1",
    "pandas>=2.0.0",
    "ollama>=0.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "toml-cli>=0.7.0",
    "ipykernel>=6.29.5",
]
[tool.pytest.ini_options]
pythonpath = "src"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
