[project]
name = "easy-nlp-translate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface>=0.0.1",
    "datasets==2.18.0", 
    "evaluate==0.4.3",
    "matplotlib==3.10.1",
    "ollama==0.4.8",
    "pandas==2.2.3",
    "PyYAML==6.0.2",
    "seaborn==0.13.2",
    "torch==2.6.0",
    "transformers==4.50.3",
    "nltk==3.9.1"
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "toml-cli>=0.7.0",
    "ipykernel>=6.29.5",
]
[tool.pytest.ini_options]
pythonpath = "src"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
