[project]
name = "easy-nlp-translate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <=3.12"
dependencies = [
    "datasets>=3.6.0",
    "huggingface>=0.0.1",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "ollama>=0.4.8",
    "pandas>=2.2.3",
    "protobuf>=6.31.0",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "toml-cli>=0.7.0",
    "ipykernel>=6.29.5",
]
[tool.pytest.ini_options]
pythonpath = "src"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
